Initial GIGA Compass setup

--- a/src/tabExplore.html
+++ b/src/tabExplore.html
@@ -65,7 +65,7 @@ limitations under the License.
     theme,
   }) => {
     const palette = theme === 'dark' ? DARK_MODE_PALETTE : COLOR_PALETTE;
-    const textColor = theme === 'dark' ? '#f1f5f9' : '#1e293b';
+    const textColor = 'rgba(255,255,255,0.9)';
     const gridColor = theme === 'dark' ? '#334155' : '#e2e8f0';
 
     const searchVolumeDisclaimer = (
