--- a/src/webApp.html
+++ b/src/webApp.html
@@ -55,18 +55,17 @@ limitations under the License.
         --primary: #2563eb;
         --primary-dark: #1d4ed8;
         --secondary: #64748b;
-        --bg-color: #f8fafc;
-        --surface-color: #ffffff;
-        --text-main: #1e293b;
-        --text-secondary: #64748b;
-        --border-color: #e2e8f0;
+        --bg-color: #0f172a;
+        --surface-color: #1e293b;
+        --text-main: #e5e7eb;
+        --text-secondary: #9ca3af;
+        --border-color: rgba(255,255,255,0.08);
         --success: #10b981;
         --error: #ef4444;
         --radius-md: 12px;
         --radius-lg: 16px;
         --shadow-sm: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-        --shadow-md:
-          0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+        --shadow-md: inset 0 1px 1px rgba(255,255,255,0.05),0 8px 24px rgba(0,0,0,0.6);
         --shadow-lg:
           0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
       }
@@ -177,7 +176,11 @@ limitations under the License.
 
 
       .card:hover {
-        box-shadow: var(--shadow-lg);
+        transform: none;
+        box-shadow:
+        inset 0 1px 1px var(--border-color),
+        0 0 0 1px var(--primary),
+        0 12px 30px var(--shadow-lg);
       }
 
       h1,
@@ -272,9 +275,12 @@ limitations under the License.
       }
 
       .btn-primary:hover:not(:disabled) {
-        transform: translateY(-1px);
-        box-shadow: 0 6px 8px -1px rgba(37, 99, 235, 0.4);
+        transform: none;
+        box-shadow:
+        0 0 0 1px rgba(37,99,235,0.6),
+        0 6px 18px rgba(37,99,235,0.6);
       }
+
 
       .btn-primary:active:not(:disabled) {
         transform: translateY(0);
@@ -350,9 +356,10 @@ limitations under the License.
       }
 
       .tab-btn:hover:not(.active) {
-        background: var(--bg-color);
-        color: var(--text-main);
+        background: rgba(37, 99, 235, 0.12);
+        box-shadow: inset 0 0 0 1px rgba(37,99,235,0.35);
       }
+
 
       /* Loading & Status */
       .status-msg {
@@ -665,11 +672,31 @@ limitations under the License.
         font-size: 2rem;
         color: #dc2626;
       }
+      .giga-header { position: fixed; 
+        top: 12px; left: 12px; 
+        z-index: 1000; display: 
+        flex; align-items: center; } 
+      .back-btn { color: var(--text-secondary); 
+        border: 1px solid var(--border-color); 
+        background: transparent; } 
+      .back-btn:hover { background: rgba(37, 99, 235, 0.08); 
+        border-color: rgba(37, 99, 235, 0.4); 
+        color: var(--primary); }
     </style>
   </head>
   <body>
     <div id="root"></div>
-
+    <div class="giga-header">
+      <button class="btn-icon back-btn" onclick="goBackToCompass()" title="Back to Compass">
+        <span class="material-symbols-outlined">arrow_back</span>
+      </button>
+    </div>
+    
+    <script>
+      function goBackToCompass() {
+        window.top.location.replace('https://app.my-compass.ai/');
+      }
+    </script>    
     <script>
       const USER_EMAIL = "<?= userEmail ?>";
       const IS_EFFECTIVE_USER = "<?= isEffectiveUser ?>" === 'true';
@@ -761,7 +788,7 @@ limitations under the License.
 
           // Update Chart.js defaults
           const isDark = theme === 'dark';
-          const textColor = isDark ? '#f1f5f9' : '#1e293b';
+          const textColor = 'rgba(255,255,255,0.9)';
           const gridColor = isDark ? '#334155' : '#e2e8f0';
 
           Chart.defaults.color = textColor;
@@ -2303,28 +2330,6 @@ limitations under the License.
                     style={{ fontSize: '1.5rem' }}
                   >
                     settings
-                  </span>
-                </button>
-                <button
-                  className="btn"
-                  onClick={toggleTheme}
-                  style={{
-                    background: 'transparent',
-                    color: 'var(--text-secondary)',
-                    border: '1px solid var(--border-color)',
-                    padding: '8px',
-                  }}
-                  title={
-                    theme === 'light'
-                      ? 'Switch to Dark Mode'
-                      : 'Switch to Light Mode'
-                  }
-                >
-                  <span
-                    className="material-symbols-outlined"
-                    style={{ fontSize: '1.5rem' }}
-                  >
-                    {theme === 'light' ? 'dark_mode' : 'light_mode'}
                   </span>
                 </button>
               </div>
